--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
   },
   "require": {
     "php": ">=7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "6.*",
+    "squizlabs/php_codesniffer": "1.5.*"
   }
 }
